fix: use commons-fileupload for multipart parsing
Replaces use of a server-specific fileupload class with Apache Commons FileUpload to parse multipart requests more reliably. Implements DiskFileItemFactory/ServletFileUpload parsing and maps form fields and file items into a unified form structure, updates file handling to use FileItem, and uses URI-based URL creation for safer parsing. Improves error reporting by elevating warnings to errors and throwing ServletException, and updates the servlet method signature to properly override the POST handler.

These changes improve compatibility, robustness of multipart parsing, and error visibility during processor uploads.